# DigitalAudioMixer

./: Mixer Architecture.drawio  README.md  desktop.ini
Audio_Board_AD_Breakout/: 1V_PSU_sch.kicad_sch  ADC.kicad_sch  Audio_Board_AD_Breakout.kicad_pcb  Audio_Board_AD_Breakout.kicad_prl  Audio_Board_AD_Breakout.kicad_pro  Audio_Board_AD_Breakout.kicad_sch  DAC.kicad_sch  PREAMPS.kicad_sch  Phantom.kicad_sch  sym-lib-table
Audio_Board_Analog_Only/: 1.8V_PSU_sch.kicad_sch  3.3V_PSU_sch.kicad_sch  ADC.kicad_sch  Audio_Board_Analog_Only.kicad_pcb  Audio_Board_Analog_Only.kicad_prl  Audio_Board_Analog_Only.kicad_pro  Audio_Board_Analog_Only.kicad_sch  Audio_Board_Analog_Only.kicad_sch-bak  DAC.kicad_sch  LDO.kicad_sch  PREAMPS.kicad_sch  Phantom.kicad_sch  XCORE.kicad_sch  _autosave-ADC.kicad_sch  untitled.kicad_sch
Documentation/: CDR Evaluation Form 2-7-2025 AM Session JoshuaYu.docx
Power_Supplies/: #auto_saved_files#  1.8V_PSU_sch.kicad_sch  1V_PSU_sch.kicad_sch  3.3V_PSU_sch.kicad_sch  5V_PSU_sch.kicad_sch  ADC.kicad_sch  DAC.kicad_sch  PREAMPS.kicad_sch  PREAMPS.kicad_sch-bak  Phantom.kicad_sch  Phantom.kicad_sch-bak  Power_Supplies.kicad_pcb  Power_Supplies.kicad_prl  Power_Supplies.kicad_pro  Power_Supplies.kicad_sch  XCORE.kicad_sch  _autosave-Phantom.kicad_sch  _autosave-XCORE.kicad_sch  freerouting.dsn  temp-freerouting.dsn  untitled.kicad_sch  ~Power_Supplies.kicad_sch.lck
Power_Supplies_Copy/: #auto_saved_files#  1.8V_PSU_sch.kicad_sch  3.3V_PSU_sch.kicad_sch  (+4 more)
rpiBackend/state/: Cargo.toml  Makefile
rpiBackend/state/src/: main.rs  main_archive.rs
(+1007 files in other folders)
