[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.31"
rppal = "0.19.0"
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
tokio-tungstenite = "0.24.0"
